Finalization of README and ipynb file

--- a/food11_image_classification_final.ipynb
+++ b/food11_image_classification_final.ipynb
@@ -698,9 +698,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dc6ec6a625924144bc2c3b6fca7b8f33",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/4.52k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d8d8f9fae66c47089bb1a9a506dbf764",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/1.71G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "308e179c398147ffa77114f161be9b73",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/905 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51d645a4489a4a6a9a8897c28ce76e9d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json:   0%|          | 0.00/961k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "025a2fd4efc3453daefe1284ad732fba",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt:   0%|          | 0.00/525k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "deb326a2d8fd4297a7fb30a9acbebc5f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/2.22M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "192893dcd14448b08861928283d19978",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "special_tokens_map.json:   0%|          | 0.00/389 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4d50aa713ae74caba1c871d5cde056ab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "preprocessor_config.json:   0%|          | 0.00/316 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n",
+      "Device set to use cuda:0\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -713,14 +833,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/550 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 550/550 [08:31<00:00,  1.07it/s]"
+      "  2%|▏         | 10/550 [00:02<01:05,  8.22it/s]You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n",
+      "100%|██████████| 550/550 [00:44<00:00, 12.35it/s]"
      ]
     },
     {
@@ -728,7 +842,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✅ Zero-shot CLIP Accuracy on 550 images: 82.36%\n"
+      "✅ Zero-shot CLIP results on 550 images:\n",
+      "Accuracy: 0.8400 (84.00%)\n",
+      "Precision: 0.8850\n",
+      "Recall: 0.8400\n"
      ]
     },
     {
@@ -740,12 +857,23 @@
     }
    ],
    "source": [
-    "from tqdm import tqdm \n",
+    "from transformers import pipeline\n",
+    "from PIL import Image\n",
+    "import os\n",
+    "from tqdm import tqdm\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
     "\n",
-    "correct = 0\n",
-    "total = 0\n",
+    "# Load CLIP zero-shot image classification pipeline\n",
+    "checkpoint = \"openai/clip-vit-large-patch14\"\n",
+    "detector = pipeline(model=checkpoint, task=\"zero-shot-image-classification\")\n",
     "\n",
-    "# Map folder names → correct CLIP label\n",
+    "# Candidate labels\n",
+    "candidate_labels = [\n",
+    "    \"bread\", \"dairy product\", \"dessert\", \"egg\", \"fried food\",\n",
+    "    \"meat\", \"noodles or pasta\", \"rice\", \"seafood\", \"soup\", \"vegetables or fruits\"\n",
+    "]\n",
+    "\n",
+    "# Folder to label mapping\n",
     "folder_to_label = {\n",
     "    \"Bread\": \"bread\",\n",
     "    \"Dairy product\": \"dairy product\",\n",
@@ -774,27 +902,35 @@
     "\n",
     "print(f\"\\nTesting {len(image_list)} images...\")\n",
     "\n",
-    "# Loop and run CLIP\n",
+    "# Lists for sklearn metrics\n",
+    "true_labels = []\n",
+    "predicted_labels = []\n",
+    "\n",
+    "# Loop and run zero-shot classification\n",
     "for path, true_label in tqdm(image_list):\n",
     "    if not os.path.exists(path):\n",
     "        print(f\"❌ Not found: {path}\")\n",
     "        continue\n",
     "\n",
     "    image = Image.open(path).convert(\"RGB\")\n",
-    "    inputs = clip_processor(text=candidate_labels, images=image, return_tensors=\"pt\", padding=True)\n",
-    "    outputs = clip_model(**inputs)\n",
-    "    probs = outputs.logits_per_image.softmax(dim=1)[0]\n",
+    "    results = detector(image, candidate_labels=candidate_labels)\n",
+    "    sorted_results = sorted(results, key=lambda x: x['score'], reverse=True)\n",
+    "    predicted_label = sorted_results[0]['label']\n",
     "\n",
-    "    clip_top_idx = probs.argmax()\n",
-    "    clip_top_label = candidate_labels[clip_top_idx]\n",
+    "    # Append to lists\n",
+    "    true_labels.append(true_label)\n",
+    "    predicted_labels.append(predicted_label)\n",
     "\n",
-    "    if clip_top_label == true_label:\n",
-    "        correct += 1\n",
-    "    total += 1\n",
+    "# Calculate metrics\n",
+    "accuracy = accuracy_score(true_labels, predicted_labels)\n",
+    "precision = precision_score(true_labels, predicted_labels, average='weighted', labels=candidate_labels)\n",
+    "recall = recall_score(true_labels, predicted_labels, average='weighted', labels=candidate_labels)\n",
     "\n",
-    "# Final result:\n",
-    "clip_accuracy = (correct / total) * 100\n",
-    "print(f\"\\n✅ Zero-shot CLIP Accuracy on {total} images: {clip_accuracy:.2f}%\")\n"
+    "# Print results\n",
+    "print(f\"\\n✅ Zero-shot CLIP results on {len(image_list)} images:\")\n",
+    "print(f\"Accuracy: {accuracy:.4f} ({accuracy*100:.2f}%)\")\n",
+    "print(f\"Precision: {precision:.4f}\")\n",
+    "print(f\"Recall: {recall:.4f}\")\n"
    ]
   },
   {
